samples/_failures_safe/1761087151_6e4d81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38e64916.c: In function ‘parser_init’:
./samples/SAFE/__tmp_38e64916.c:152:11: error: expected ‘;’ at end of input
  152 |     parser
      |           ^
      |           ;
./samples/SAFE/__tmp_38e64916.c:152:5: error: expected declaration or statement at end of input
  152 |     parser
      |     ^~~~~~
